using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SerwisSamochodowy.Common
{
    internal static class Staticks
    {
        public const string FolderDanych = "dane\\";

        public const string PlikCzesci = FolderDanych + "Czesci.json";
        public const string PlikFaktur = FolderDanych + "Faktury.json";
        public const string PlikKierownikow = FolderDanych + "Kierownicy.json";
        public const string PlikKlientow = FolderDanych + "Klienci.json";
        public const string PlikMechanikow = FolderDanych + "Mechanicy.json";
        public const string PlikSamochodow = FolderDanych + "Samochody.json";
        public const string PlikUsterek = FolderDanych + "Usterki.json";
        public const string PlikZlecenNaprawy = FolderDanych + "ZleceniaNaprawy.json";

        public const string FolderFaktur = "faktury\\";

    }
}
